# password_manager

./: .gitignore  Cargo.toml  PACKAGING.md  README.md  build-packages.ps1  build-packages.sh
.github/workflows/: ci.yml  release.yml
src/: crypto.rs  main.rs  vault.rs
